# Clouds

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/DefaultShader/: DefaultShader.cpp  DefaultShader.h
src/InputManager/: InputManager.cpp  InputManager.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Shader/: Shader.cpp  Shader.h
src/ShaderCreator/: ShaderCreator.cpp  ShaderCreator.h
src/Window/: Window.cpp  Window.h
